# Forge

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  DIRECTION.md  FEATURE_CATALOG.md  HANDOFF.md  INTERFACE.md  LOGGING.md  STATUS.md
docs/devlog/: arrange-drag.md  arrange.md  browser.md  detail.md  device-recording.md  engine-mix.md  export.md  hygiene.md  integration.md  logging-design.md  midi-build.md  midi-design.md  midi-record-design.md  mixer-fx.md  mixer.md  plugins.md  session-design.md  session-scroll-design.md  session.md  shell.md  wave-01-features.md  wave-02-features.md  wave-03-features.md  wave-04a-ux.md  wave-04b-ux.md  wave-05-undo.md  wave-06-handson.md  wave-07-handson-grid.md  wave-08-session-mixer.md  wave-09-instruments.md  wave-10-send-to-arrangement.md  wave-11-launcher-expressiveness.md  wave-12-per-clip-launch-quantise.md  wave-13-grid-clip-primitives.md  wave-14-midi-quantise.md  wave-15-scene-lifecycle.md  wave-16-w05-qc-debt.md  wave-17-performance-capture.md  wave-18-scene-send-loop.md  wave-19-session-mixer-polish.md  (+5 more)
mockups/: .gitignore  00-session-clip-grid-primary.dxf  01-arrange-default-lean.dxf  02-compose-browser-piano-roll.dxf  03-audio-clip-inspector-drawer.dxf  04-mixer-view.dxf  05-recording.dxf  06-device-chain-plugin-window.dxf  07-anatomy-theme-spec.dxf  08-overlays-modals.dxf  09-controllers-hardware-mapping-reference.dxf  README.md  forge-ui-storyboard.dxf
mockups/src/: Dockerfile  anatomy.py  build.py  forge_ui.py  overlays.py  screens.py
src/: main.cpp
src/core/: Log.cpp  Log.h
src/engine/: AudioEditHelpers.h  AutomationHelpers.h  ClipFades.cpp  ClipFades.h  ControlSurfaceHost.h  EngineHelpers.h  ForgeUIBehaviour.cpp  ForgeUIBehaviour.h  GridControlDriver.h  LaunchpadDriver.cpp  LaunchpadDriver.h  Metronome.cpp  Metronome.h  MidiClockProbe.h  MidiClockSync.h  MidiEditHelpers.h  MidiLearn.cpp  MidiLearn.h  ModifierHelpers.h  PluginHost.cpp  PluginHost.h  PluginScanner.cpp  PluginScanner.h  RecordController.cpp  RecordController.h
src/engine/dsp/: InstrumentSamples.cpp  InstrumentSamples.h  LoudnessAnalyzer.cpp  LoudnessAnalyzer.h
src/services/export/: Exporter.cpp  Exporter.h
src/services/files/: ProjectSession.cpp  ProjectSession.h
src/ui/: ControlBar.cpp  ControlBar.h  ForgeLookAndFeel.h  SplashWindow.h
src/ui/arrange/: ArrangeView.cpp  ArrangeView.h  AutomationLane.cpp  AutomationLane.h
src/ui/browser/: BrowserView.cpp  BrowserView.h
src/ui/common/: PeakMeter.h  StripWidgets.h
src/ui/detail/: DetailView.cpp  DetailView.h
src/ui/export/: ExportProgress.cpp  ExportProgress.h
src/ui/markers/: MarkerBar.cpp  MarkerBar.h
src/ui/menu/: ForgeMenuModel.cpp  ForgeMenuModel.h
src/ui/mixer/: MixerView.cpp  MixerView.h
src/ui/pianoroll/: MidiNoteComponent.cpp  MidiNoteComponent.h  PianoRollView.cpp  PianoRollView.h  VelocityLane.cpp  VelocityLane.h
src/ui/plugins/: PluginWindow.cpp  PluginWindow.h
src/ui/popout/: PopoutWindow.cpp  PopoutWindow.h
src/ui/session/: ClipSlotComponent.cpp  ClipSlotComponent.h  SceneColumnComponent.cpp  SceneColumnComponent.h  SessionLayout.h  SessionMasterStrip.cpp  SessionMasterStrip.h  SessionMixerStrip.cpp  SessionMixerStrip.h  SessionView.cpp  SessionView.h  SlotVisualState.h  TrackColumnComponent.cpp  TrackColumnComponent.h
src/ui/stepclip/: StepGridView.cpp  StepGridView.h
src/ui/transport/: LcdDisplay.cpp  LcdDisplay.h  LcdModel.h  TapTempo.h  TempoPopup.cpp  TempoPopup.h  TimeSigPopup.cpp  TimeSigPopup.h  TransportBar.cpp  TransportBar.h
src/ui/tray/: ChannelTray.cpp  ChannelTray.h
tests/: SELFTEST.md
